adding the logo

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,4 +28,4 @@ flutter:
 
 screenshots:
   - description: The package logo.
-    path: assets/Screenshot 2025-02-11 at 23.24.56.png
+    path: assets/logo.png
